<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/llSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/speed"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/speed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/speed"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSubtitleDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/llSpeed"
        app:layout_constraintRight_toLeftOf="@+id/llCycles">

        <ImageView
            android:id="@+id/subtitleDownload"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/subtitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/subtitle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCycles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/cycles"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/cycles"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/cycles"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="llSpeed, llSubtitleDownload, llCycles"/>

    <ru.araok.custom.VideoPlayer
        android:id="@+id/videoPlayer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/subtitle"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        app:layout_constraintVertical_weight="7"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/videoPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="3"
        />

    <LinearLayout
        android:id="@+id/llMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/mark"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="200dp"
            android:src="@drawable/from_to"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/from_to"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/llMark"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/delete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/mark"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/delete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/delete"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llDelete"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/start"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/start"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:alpha="0.5"
        android:layout_gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>